syntax = "proto3";
package capprobe;

message PlayerPrefs {
  bool noUseFormatCodes = 1;
  bool showFailureDetails = 2;
}
